examples/networkpolicy/app-networkpolicy.yaml
# Example NetworkPolicy for an application scaled by the KEDA HTTP Add-on.
# This example matches the labels used by examples/xkcd.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: xkcd
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: xkcd
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: keda
          podSelector:
            matchLabels:
              app.kubernetes.io/name: http-add-on
              app.kubernetes.io/component: interceptor
      ports:
        - protocol: TCP
          port: 8080
  egress:
    # DNS.
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
